# antarian-chess-rs

./: .gitignore  Cargo.toml  Dockerfile  build.rs  nginx.conf  start.sh
.github/workflows/: release.yml
crates/bot/: Cargo.toml
crates/bot/benches/: bot_bench.rs
crates/bot/src/: evaluation.rs  lib.rs  search.rs  tt.rs
crates/engine/: Cargo.toml
crates/engine/benches/: engine_bench.rs
crates/engine/src/: board.rs  lib.rs  movegen.rs  pieces.rs  rays.rs  types.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs  protocol.rs  server.rs
src/: audio.rs  dialogs.rs  main.rs
src/components/: chess_board.rs
src/startup/: install.rs  mod.rs  update.rs
src/theme/: font.rs  mod.rs
