[package]
name = "antarian-chess-rs"
version = "0.1.6"
edition = "2024"
default-run = "antarian-chess-rs"

[workspace]
members = ["crates/bot", "crates/engine", "crates/server"]
default-members = [".", "crates/bot", "crates/engine", "crates/server"]
resolver = "3"

[features]
default = ["auto_update"]
auto_update = ["reqwest", "semver"]

[dependencies]
chess_bot = { path = "crates/bot" }
chess_engine = { path = "crates/engine" }
chess_server = { path = "crates/server" }

anyhow = "1.0"
dirs = "6.0.0"
machine-uid = "0.6"
mimalloc = "0.1"
rodio = { version = "0.19", features = ["mp3"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }

reqwest = { version = "0.13", features = ["blocking", "json", "rustls"], optional = true }
semver = { version = "1.0", optional = true }

[build-dependencies]
chrono = "0.4"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = true
codegen-units = 1
